# blockwars

./: CNAME  Cargo.toml  README.md  build.sh  dev.sh  index.html
docs/: CNAME  blockwars.wasm  index.html
src/: lib.rs
