[package]
name = "blockwars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
talc = { version = "4.3.1", default-features = false, features = ["lock_api", "counters"] }
spin = "0.9.8"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
opt-level = 's'
codegen-units = 1
panic = "abort"
incremental = false
